k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-backend
  labels:
    app: employee-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: employee-backend

  template:
    metadata:
      labels:
        app: employee-backend
        azure.workload.identity/use: "true"

    spec:
      serviceAccountName: employee-backend-sa

      containers:
        - name: employee-backend
          image: acrjavaaks2026.azurecr.io/employee-backend:1.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
