k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-backend-service

spec:
  type: ClusterIP

  selector:
    app: employee-backend

  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
