k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-frontend-service

spec:
  type: ClusterIP

  selector:
    app: employee-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
