k8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: employee-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-frontend-service
                port:
                  number: 80
